--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ Dune/~$чет по компьютерному моделированию.docx
 *.o
 moc_*
 Makefile*
+*.autosave
+*.autosave
+build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/ui_widget.h
