--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@ Makefile*
 *.autosave
 *.autosave
 build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/ui_widget.h
+build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/usersjohnappdatalocaltemptmpfuslfp
+build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/usersjohnappdatalocaltemptmpy8kqhw
+build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Release/release/game.exe
+build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/game.exe
+*.user
