--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/game.exe
 build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Release/release/qrc_sprites.cpp
 build-game-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/debug/qrc_sprites.cpp
 *.user
+*.user
